# rust_unciv_server

./: Cargo.toml  INSTALL.md  LICENSE  README.md  devenv.nix  flake.nix  package.nix  rustfmt.toml
.github/workflows/: ci.yml  format.yml  release.yml
install/: INSTALL.md  rust_unciv_server.conf  rust_unciv_server.service  rust_unciv_server.socket
src/: app.rs  cmd.rs  common.rs  listener.rs  main.rs  tests.rs
