[package]
name = "rust_unciv_server"
description = "Simple Unciv multiplayer server"
version = "0.1.7"
authors = ["Philipp David <pd@3b.pm>"]
repository = "https://github.com/oynqr/rust_unciv_server"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-fs = "1.5.0"
clap = { version = "4.3.0", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
    "wrap_help",
] }
env_logger = { version = "0.10.0", default-features = false }
fastrand = "1.9.0"
futures-lite = "1.13.0"
log = "0.4.17"
trillium = { git = "https://github.com/oynqr/trillium" }
trillium-forwarding = { git = "https://github.com/oynqr/trillium" }
trillium-logger = { git = "https://github.com/oynqr/trillium" }
trillium-router = { git = "https://github.com/oynqr/trillium" }
trillium-smol = { git = "https://github.com/oynqr/trillium" }
trillium-static = { git = "https://github.com/oynqr/trillium", features = [
    "smol",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
