[package]
name = "rust_unciv_server"
description = "Simple Unciv multiplayer server"
version = "0.1.16"
authors = ["Philipp David <pd@3b.pm>"]
repository = "https://github.com/oynqr/rust_unciv_server"
license = "AGPL-3.0-only"
edition = "2024"

[dependencies]
anyhow = "1.0.71"
async-fs = "2.0.0"
async-net = "2.0.0"
clap = { version = "4.3.0", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "error-context",
    "wrap_help",
] }
env_logger = { version = "0.11.0", default-features = false }
fastrand = "2.0.1"
futures-lite = "2.0.0"
listenfd = "1.0.1"
log = "0.4.17"
trillium = { git = "https://github.com/trillium-rs/trillium" }
trillium-forwarding = { git = "https://github.com/trillium-rs/trillium" }
trillium-logger = { git = "https://github.com/trillium-rs/trillium" }
trillium-router = { git = "https://github.com/trillium-rs/trillium" }
trillium-smol = { git = "https://github.com/trillium-rs/trillium" }
trillium-static = { git = "https://github.com/trillium-rs/trillium", features = [
    "smol",
] }

[target.'cfg(not(any(target_os = "windows", target_arch = "powerpc")))'.dependencies]
mimalloc = "0.1.43"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
